Resize container and icon size

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
   <div class="container mx-auto px-4 py-8">
-    <div class="text-center mb-8">
-      <img class="inline-block rounded-full h-24 w-24 object-cover mx-auto" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
-      <h2 class="text-2xl font-bold mt-4">Hi, I am Elisa, a full-stack software developer based in Bozeman, Montana.</h2>
-      <p class="mt-2 text-base">In my free time, you can find me climbing, solving jigsaw puzzles or Sudoku, reading a crime novel, or learning a new language.</p>
-      <p class="mt-2 text-base">Please feel free to look at my past and current projects and reach out at any time at <span id="email" class="cursor-pointer underline custom-link">codersquirrelbln@gmail.com</span></p>
+    <div class="text-center mb-20 mt-14">
+      <img class="inline-block rounded-full h-52 w-52 object-cover mx-auto" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
+      <h2 class="text-2xl font-bold mt-4">Hi, I am Elisa, a full-stack developer at <a href="https://zaikio.com/" class="custom-link">Zaikio</a> based in Bozeman, Montana.</h2>
+      <p class="mt-2 text-base">In my free time, you'll find me climbing, solving puzzles or sudoku, reading a crime novel, or learning a new language.</p>
+      <p class="mt-2 text-base">Please feel free to reach out to me any time at <span id="email" class="cursor-pointer underline custom-link">codersquirrelbln@gmail.com</span>!</p>
     </div>
 
     <div class="flex flex-wrap -mx-4">
@@ -27,9 +27,8 @@
           <img src="images/line.png" alt="Screenshot of the Line Platform">
           <div class="p-4 card-body">
             <div class="project-info">
-              <h3 class="font-bold mb-4">Line</a></h3>
-              <p class="mt-2 text-base">facilitates the financial contribution to open source projects, using web3 technology.</p>
-              <div class="flex space-x-2 mt-4">
+              <p class="mt-2 text-base"><strong>Line</strong> facilitates financial contributions to open source projects using web3.</p>
+              <div class="flex space-x-2 mt-2">
                 <a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">Code</a>
                 <a href="casestudy_line.html" class="custom-link">Case Study</a>
                 <a href="https://withline.xyz/" target="_blank" class="custom-link">withline.xyz</a>
@@ -43,9 +42,8 @@
         <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/eldermeLandingpageScreenshot.png" alt="Screenshot of the ElderMe app">
           <div class="p-4 card-body">
-            <h3 class="font-bold mb-4">ElderMe</a> </h3>
-            <p class="mt-2 text-base">is a platform for senior users to find volunteers for activities and outings.</p>
-            <div class="flex space-x-2 mt-4">
+            <p class="mt-2 text-base"><strong>ElderMe</strong> is a platform for senior users to find volunteers for activities.</p>
+            <div class="flex space-x-2 mt-2">
               <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="custom-link">Code</a>
               <a href="casestudy_elderme.html" class="custom-link">Case Study</a>
             </div>
@@ -57,9 +55,8 @@
         <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/visa_calculator_landing.png" alt="Screenshot of the Visa Calculator">
           <div class="p-4 card-body">
-            <h3 class="font-bold mb-4">The Visa Calculator</a></h3>
-            <p class="mt-2 text-base">enables travelers to calculate stays to comply with visa regulations.</p>
-            <div class="flex space-x-2 mt-4">
+            <p class="mt-2 text-base"><strong>Visa Calculator</strong> helps travelers comply with visa regulations.</p>
+            <div class="flex space-x-2 mt-2">
               <a href="https://github.com/codersquirrelbln/visa_calculator" target="_blank" class="custom-link">Code</a>
               <a href="casestudy_calculator.html" class="custom-link">Case Study</a>
               <a href="https://codersquirrelbln.github.io/visa_calculator/" target="_blank" class="custom-link">Go to Project</a>
@@ -72,9 +69,8 @@
         <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/roadmap.jpg" alt="Drawn Out Roadmap">
           <div class="p-4 card-body">
-            <h3 class="font-bold mb-4">FlashBack</a></h3>
-            <p class="mt-2 text-base"> helps learning new words in a foreign language.</p>
-            <div class="flex space-x-2 mt-4">
+            <p class="mt-2 text-base"><strong>FlashBack</strong> supports learning new words in a foreign language.</p>
+            <div class="flex space-x-2 mt-2">
               <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank" class="custom-link">Code</a>
               <a href="casestudy_flashcards.html" class="custom-link">Case Study</a>
             </div>
@@ -86,9 +82,8 @@
         <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/r_reminder.png" alt="Reminder app">
           <div class="p-4 card-body">
-            <h3 class="font-bold mb-4">RReminder</a></h3>
-            <p class="mt-2 text-base"> You'll never forget anything important ever again.</p>
-            <div class="flex space-x-2 mt-4">
+            <p class="mt-2 text-base"><strong>RReminder</strong> keeps you on top of things.</p>
+            <div class="flex space-x-2 mt-2">
               <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank" class="custom-link">Code</a>
               <a href="casestudy_rreminder.html" class="custom-link">Case Study</a>
             </div>
@@ -104,7 +99,6 @@
         <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
         <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
       </div>
-      &copy; 2024 Elisa Burghard
     </footer>
 
     <script>
