--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <div class="mx-auto max-w-xl p-5 bg-white">
+  <div class="mx-auto max-w-2xl p-5 bg-white">
     <h2 class="text-2xl font-bold mt-4 mb-4">FlashBack</h2>
-
+    <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank" class="custom-link">See code</a>
     <div>
       <h4 class="text-xl font-semibold my-2 mt-6">Goal</h4>
       <ul class="list-disc pl-5">
@@ -203,7 +203,7 @@
       <p class="mt-2 text-base">This was an amazing collaboration and wonderful opportunity to work closely with a product designer and amazing fellow human, thank you, <a href="https://stephaniehawkins.design" class="custom-link" target="_blank">Steph</a>.</p>
     </div>
 
-    <div>
+    <div class="mb-4 flex justify-center">
       <ul class="flex list-none p-0">
         <li class="mx-2">
           <a href="casestudy_calculator.html" class="custom-link">Previous case study</a>
@@ -219,13 +219,10 @@
 
     <footer class="text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
-        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab fa-2x"></i></a>
-        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter fa-2x"></i></a>
-      </div>
-      <div class="mt-4 text-sm">
-        &copy; 2024 Elisa Burghard
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github fa-1x"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin fa-1x"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab fa-1x"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter fa-1x"></i></a>
       </div>
     </footer>
   </div>
