--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -37,23 +37,19 @@
     <div class="mb-4 flex justify-center">
       <ul class="flex list-none p-0">
         <li class="mx-2">
-          <a href="casestudy_rreminder.html" class="custom-link">Previous case study</a>
-        </li>
-        <li class="mx-2">
           <a href="index.html" class="custom-link">Home</a>
         </li>
         <li class="mx-2">
-          <a href="casestudy_elderme.html" class="custom-link">Next case study</a>
+          <a href="casestudy_calculator.html" class="custom-link">Case study Visa calculator</a>
         </li>
       </ul>
     </div>
     
     <footer class="text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
-        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github fa-1x"></i></a>
-        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin fa-1x"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab fa-1x"></i></a>
-        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter fa-1x"></i></a>
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500" style="color: orange"><i class="fab fa-gitlab fa-1x"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
       </div>
     </footer>
   </div>
