--- a/index.html
+++ b/index.html
@@ -40,19 +40,6 @@
 
       <div class="w-full md:w-1/2 px-4 mb-8">
         <div class="card bg-white shadow-md rounded-lg overflow-hidden">
-          <img class="w-full" src="images/eldermeLandingpageScreenshot.png" alt="Screenshot of the ElderMe app">
-          <div class="p-4 card-body">
-            <p class="mt-2 text-base"><strong>ElderMe</strong> is a platform for senior users to find volunteers for activities.</p>
-            <div class="flex space-x-2 mt-2">
-              <a href="https://github.com/codersquirrelbln/elderme" target="_blank" class="custom-link">Code</a>
-              <a href="casestudy_elderme.html" class="custom-link">Case Study</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/visa_calculator_landing.png" alt="Screenshot of the Visa Calculator">
           <div class="p-4 card-body">
             <p class="mt-2 text-base"><strong>Visa Calculator</strong> helps travelers comply with visa regulations.</p>
@@ -64,40 +51,13 @@
           </div>
         </div>
       </div>
-
-      <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
-          <img class="w-full" src="images/roadmap.jpg" alt="Drawn Out Roadmap">
-          <div class="p-4 card-body">
-            <p class="mt-2 text-base"><strong>FlashBack</strong> supports learning new words in a foreign language.</p>
-            <div class="flex space-x-2 mt-2">
-              <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank" class="custom-link">Code</a>
-              <a href="casestudy_flashcards.html" class="custom-link">Case Study</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
-          <img class="w-full" src="images/r_reminder.png" alt="Reminder app">
-          <div class="p-4 card-body">
-            <p class="mt-2 text-base"><strong>RReminder</strong> keeps you on top of things.</p>
-            <div class="flex space-x-2 mt-2">
-              <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank" class="custom-link">Code</a>
-              <a href="casestudy_rreminder.html" class="custom-link">Case Study</a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <footer class="text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
         <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500" style="color: orange"><i class="fab fa-gitlab fa-1x"></i></a>
         <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
-        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
       </div>
     </footer>
 
