--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container mx-auto px-4 py-8">
     <div class="text-center mb-20 mt-14">
       <img class="inline-block rounded-full h-52 w-52 object-cover mx-auto" src="images/elisa_profile_pic.jpg" alt="Profile Picture of Elisa">
-      <h2 class="text-2xl font-bold mt-4">Hi, I am Elisa, a full-stack developer at <a href="https://zaikio.com/" class="custom-link">Zaikio</a> based in Bozeman, Montana.</h2>
+      <h2 class="text-2xl font-bold mt-4">Hi, I am Elisa, a full-stack developer at <a href="https://zaikio.com/" class="custom-link">Zaikio</a> and based in Bozeman, Montana.</h2>
       <p class="mt-2 text-base">In my free time, you'll find me climbing, solving puzzles or sudoku, reading a crime novel, or learning a new language.</p>
       <p class="mt-2 text-base">Please feel free to reach out to me any time at <span id="email" class="cursor-pointer underline custom-link">codersquirrelbln@gmail.com</span>!</p>
     </div>
