Add video walkthroughs for line casestudy

--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -1,57 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Line</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
-  <div class="mx-auto max-w-2xl p-5 bg-white">
-    <h2 class="text-2xl font-bold mt-4 mb-4">Line</h2>
-    <a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">See code</a>
-    <div>
-      <h4 class="text-xl font-semibold my-2 mt-6">Approach</h4>
-      <p class="mt-2 text-base">This ongoing weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Line</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="mx-auto max-w-2xl p-5 bg-white">
+      <h2 class="text-2xl font-bold mt-4 mb-4">Line</h2>
+      <a
+        href="https://github.com/buildwithline/line"
+        target="_blank"
+        class="custom-link"
+        >See code</a
+      >
+      <div>
+        <h4 class="text-xl font-semibold my-2 mt-6">Approach</h4>
+        <p class="mt-2 text-base">
+          This ongoing weekend project gives users a platform to create
+          campaigns for their own projects to receive contributions from wallet
+          to wallet.
+        </p>
 
-      <h4 class="text-xl font-semibold my-2 mt-6">Motivation</h4>
-      <p class="mt-2 text-base">Open source projects often face challenges in securing adequate funding. Line, an open source project itself, wants to change that. I was curious about the web3 space and this project gives me the opportunity to explore, learn and expand my horizon.</p>
-    </div>
-    <div class="mb-4">
-      <h4 class="text-xl font-semibold my-2 mt-6">Features</h4>
-      <ul class="list-disc pl-5">
-        <li>Sign up via GitHub's Oauth flow</li>
-        <li>See all open repositories of which you are the owner</li>
-        <li>Add a wallet through the web3Modal of WalletConnect</li>
-        <li>Create or edit a campaign for each repo or your organization</li>
-        <li>WIP: Contribute to a project or organization</li>
-        <li>WIP: Overview of all contributions to your projects</li>
-        <li>WIP: Add bounties to projects and smart contracts</li>
-      </ul>
-    </div>
-    <div class="mb-4 flex justify-center">
-      <ul class="flex list-none p-0">
-        <li class="mx-2">
-          <a href="index.html" class="custom-link">Home</a>
-        </li>
-        <li class="mx-2">
-          <a href="casestudy_calculator.html" class="custom-link">Case study Visa calculator</a>
-        </li>
-      </ul>
-    </div>
-    
-    <footer class="text-center p-4 mt-8">
-      <div class="flex justify-center space-x-4">
-        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500" style="color: orange"><i class="fab fa-gitlab fa-1x"></i></a>
-        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
+        <h4 class="text-xl font-semibold my-2 mt-6">Motivation</h4>
+        <p class="mt-2 text-base">
+          Open source projects often face challenges in securing adequate
+          funding. Line, an open source project itself, wants to change that. I
+          was curious about the web3 space and this project gives me the
+          opportunity to explore, learn and expand my horizon.
+        </p>
       </div>
-    </footer>
-  </div>
-</body>
+      <div class="mb-4">
+        <h4 class="text-xl font-semibold my-2 mt-6">Features</h4>
+        <ul class="list-disc pl-5">
+          <li>Sign up via GitHub's Oauth flow</li>
+          <li>See all open repositories of which you are the owner</li>
+          <li>Add a wallet through the web3Modal of WalletConnect</li>
+          <li>Create or edit a campaign for each repo or your organization</li>
+          <li>WIP: Contribute to a project or organization</li>
+          <li>WIP: Overview of all contributions to your projects</li>
+          <li>WIP: Add bounties to projects and smart contracts</li>
+        </ul>
+      </div>
+      <div class="mb-4 flex justify-center">
+        <ul class="flex list-none p-0">
+          <li class="mx-2">
+            <a href="index.html" class="custom-link">Home</a>
+          </li>
+          <li class="mx-2">
+            <a href="casestudy_calculator.html" class="custom-link"
+              >Case study Visa calculator</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div class="mt-8">
+        <h4 class="text-xl font-semibold mb-2">
+          Oauth sign-in and wallet connection
+        </h4>
+        <p class="mb-4 text-base">
+          This video demonstrates the user flow for signing in through a GitHub
+          account to then see all of the user's open repositories on the Line
+          platform. The user can then connect a wallet.
+        </p>
+        <video
+          controls
+          class="w-full h-auto"
+          aria-label="Video walkthrough of oauth sign-in via GitHub and connecting a wallet on the platform Line"
+        >
+          <source
+            src="images/oauth_sign_on_and_wallet_connecting.mp4"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag. Please
+          <a href="oauth_sign_on_and_wallet_connecting.mp4"
+            >download the video</a
+          >
+          instead.
+        </video>
+      </div>
+
+      <div class="mt-8">
+        <h4 class="text-xl font-semibold mb-2">
+          Connecting and disconnecting a wallet
+        </h4>
+        <p class="mb-4 text-base">
+          This video showcases how to connect and disconnect a wallet through
+          WalletConnect. Connecting a wallet enables the user to create
+          campaigns for their open source projects.
+        </p>
+        <video
+          controls
+          class="w-full h-auto"
+          aria-label="Video walkthrough of connecting and disconnecting a wallet through WalletConnect"
+        >
+          <source src="images/connect_disconnect_wallet.mp4" type="video/mp4" />
+          Your browser does not support the video tag. Please
+          <a href="connect_disconnect_wallet.mp4">download the video</a>
+          instead.
+        </video>
+      </div>
+
+      <footer class="text-center p-4 mt-8">
+        <div class="flex justify-center space-x-4">
+          <a
+            href="https://github.com/codersquirrelbln/"
+            target="_blank"
+            class="text-gray-700"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://gitlab.com/codersquirrel"
+            target="_blank"
+            class="text-orange-500"
+            style="color: orange"
+            ><i class="fab fa-gitlab fa-1x"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/elisaburghard/"
+            target="_blank"
+            class="text-blue-700"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
