Fix path of videos

--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -85,7 +85,7 @@
           aria-label="Video walkthrough of oauth sign-in via GitHub and connecting a wallet on the platform Line"
         >
           <source
-            src="images/oauth_sign_on_and_wallet_connecting.mp4"
+            src="/images/oauth_sign_on_and_wallet_connecting.mp4"
             type="video/mp4"
           />
           Your browser does not support the video tag. Please
@@ -110,7 +110,10 @@
           class="w-full h-auto"
           aria-label="Video walkthrough of connecting and disconnecting a wallet through WalletConnect"
         >
-          <source src="images/connect_disconnect_wallet.mp4" type="video/mp4" />
+          <source
+            src="/images/connect_disconnect_wallet.mp4"
+            type="video/mp4"
+          />
           Your browser does not support the video tag. Please
           <a href="connect_disconnect_wallet.mp4">download the video</a>
           instead.
