--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -81,7 +81,7 @@
         </p>
         <video
           controls
-          width="510"
+          class="video-small"
           aria-label="Video walkthrough of oauth sign-in via GitHub and connecting a wallet on the platform Line"
         >
           <source
@@ -107,7 +107,7 @@
         </p>
         <video
           controls
-          width="510"
+          class="video-small"
           aria-label="Video walkthrough of connecting and disconnecting a wallet through WalletConnect"
         >
           <source
