move links above footer

--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -57,18 +57,6 @@
           <li>WIP: Add bounties to projects and smart contracts</li>
         </ul>
       </div>
-      <div class="mb-4 flex justify-center">
-        <ul class="flex list-none p-0">
-          <li class="mx-2">
-            <a href="index.html" class="custom-link">Home</a>
-          </li>
-          <li class="mx-2">
-            <a href="casestudy_calculator.html" class="custom-link"
-              >Case study Visa calculator</a
-            >
-          </li>
-        </ul>
-      </div>
 
       <div class="mt-8">
         <h4 class="text-xl font-semibold mb-2">
@@ -115,6 +103,19 @@
           <a href="connect_disconnect_wallet.mp4">download the video</a>
           instead.
         </video>
+      </div>
+
+      <div class="mb-4 mt-8 flex justify-center">
+        <ul class="flex list-none p-0">
+          <li class="mx-2">
+            <a href="index.html" class="custom-link">Home</a>
+          </li>
+          <li class="mx-2">
+            <a href="casestudy_calculator.html" class="custom-link"
+              >Case study Visa calculator</a
+            >
+          </li>
+        </ul>
       </div>
 
       <footer class="text-center p-4 mt-8">
